--- a/services.html
+++ b/services.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eva's Dog Services</title>
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
     <style>
         body {
@@ -108,7 +109,7 @@
 
         <div id="dogsitting-info" class="service-info" style="display:none;">
             <h2>Dog Sitting</h2>
-            <p>Need someone to care for your dog while you're away? My overnight dog sitting service provides a comfortable stay for your pet.</p>
+            <p>Need someone to care for your dog while you're away? My overnight dog sitting service lets you go out without leaving your dogs alone.</p>
              <a href="contact.html">
             <button>Book Now</button>
         </a>
