--- a/about.html
+++ b/about.html
@@ -7,12 +7,11 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
     <style>
-          body {
+        body {
             margin: 0;
             padding: 0;
             font-family: 'Comic Sans MS', cursive, sans-serif;
-            position: relative;
-            background-color: lightblue;
+            background-color: white;
         }
         .content {
             padding: 20px;
@@ -27,28 +26,29 @@
             align-items: flex-start;
             justify-content: space-between;
             width: 100%;
-            margin-bottom: 20px;
+            margin-top: 10%;
+            flex-wrap: wrap;
+        }
+        .background-image {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-size: cover;
+            background-position: center;
+            z-index: -1;
         }
         .about-text {
-            margin-top: 3%;
-            margin-left: 5%;
-            flex: 1;
-            padding: 7%; /* Added padding to top and bottom */
-            text-align: left;
-            font-size: 24px;
-        }
-        .about-image {
-            flex: 1;
-            max-width: 40%;
+            background: rgba(0, 0, 0, 0.6);
+            padding: 20px;
             border-radius: 10px;
-            margin-left: 20px;
-            margin-right: 5%;
-        }
-        .about-image img {
-            max-width: 100%; /* Ensure image fits within its container */
-            border-radius: 100px;
-            height: 80vh; /* Set the height to 80% of the viewport height */
-            padding: 5%;
+            font-size: 24px;
+            text-align: left;
+            width: 100%;
+            max-width: 600px;
+            margin: auto;
+            color: white;
         }
         h2 {
             font-size: 24px;
@@ -58,34 +58,106 @@
         p {
             font-size: 18px;
             line-height: 1.6;
-            margin: 0; /* Reset margin */
+            margin: 0;
         }
-       .logo-container {
-    display: flex;
-    align-items: center;
-    flex: 1;
-}
-
-.logo-image {
-    width: 60px; /* Adjust as needed for a larger logo */
-    height: 60px; /* Adjust as needed for a larger logo */
-    margin-right: 10px;
-}
-
-.logo-text {
-    font-size: 26px;
-    font-weight: bold;
-}
+        header {
+            width: 100%;
+            background-color: white;
+            color: black;
+            padding: 10px 0;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            position: relative;
+            z-index: 2;
+        }
+        .logo-container {
+            display: flex;
+            align-items: center;
+            margin-left: 20px;
+        }
+        .logo-image {
+            width: 40px;
+            height: 40px;
+            margin-right: 10px;
+        }
+        .logo-text {
+            font-size: 1.3em;
+        }
+        nav {
+            position: relative;
+            margin-right: 20px;
+        }
+        .menu-icon {
+            cursor: pointer;
+            display: none;
+            font-size: 2em;
+        }
+        nav ul {
+            list-style: none;
+            display: flex;
+            gap: 15px;
+            padding: 0;
+            margin: 0;
+        }
+        nav ul li {
+            padding: 0;
+            margin: 0;
+        }
+        nav ul li a {
+            color: black;
+            text-decoration: none;
+            padding: 10px 15px;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+        nav ul li a:hover {
+            background-color: rgba(0, 0, 0, 0.1);
+        }
+        @media only screen and (max-width: 900px) {
+            .menu-icon {
+                display: block;
+            }
+            nav ul {
+                flex-direction: column;
+                align-items: flex-end;
+                position: fixed;
+                top: 50px;
+                right: 0;
+                background-color: white;
+                display: none;
+                width: 200px;
+                padding: 10px;
+                z-index: 1;
+                box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            }
+            nav ul li {
+                margin: 10px 0;
+            }
+            nav ul.show {
+                display: flex;
+            }
+        }
+        @media only screen and (max-width: 500px) {
+            .logo-text {
+                font-size: 1.2em;
+            }
+            .about-text {
+                font-size: 18px;
+            }
+        }
     </style>
 </head>
 <body>
+      <div class="background-image" style="background-image: url('Eva.jpg');"></div>
     <header>
         <div class="logo-container">
             <img src="logo.png" alt="Logo" class="logo-image">
             <div class="logo-text">Eva's Dog Services</div>
         </div>
         <nav>
-            <ul>
+            <div class="menu-icon" onclick="toggleMenu()">☰</div>
+            <ul id="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="about.html">About Me</a></li>
@@ -100,11 +172,15 @@
             <p>The most amazing beautiful girl ever</p>
             <br><br><br>
             <h2>Why should you choose me?</h2>
-            <p>Because Im literally perfect</p>
-        </div>
-        <div class="about-image">
-            <img src="Eva.jpg" alt="Your Image">
+            <p>Because I'm literally perfect</p>
         </div>
     </div>
+
+    <script>
+        function toggleMenu() {
+            var menu = document.getElementById('menu');
+            menu.classList.toggle('show');
+        }
+    </script>
 </body>
 </html>
