--- a/contact.html
+++ b/contact.html
@@ -10,37 +10,39 @@
             margin: 0;
             padding: 0;
             height: 100%;
-            overflow: hidden; /* Prevent scrolling */
             font-family: 'Comic Sans MS', cursive, sans-serif;
         }
 
         header {
+            width: 100%;
+            background-color: white; /* Change header background to white */
+            color: black; /* Ensure text color is black */
+            padding: 10px 0; /* Reduce padding for smaller header */
             display: flex;
+            justify-content: space-between;
             align-items: center;
-            padding: 10px 20px;
-            background-color: #f4f4f4;
-            box-sizing: border-box;
+            position: relative;
+            z-index: 2; /* Ensure header is in front */
         }
-
         .logo-container {
             display: flex;
             align-items: center;
-            flex: 1;
+margin-left: 20px;
         }
 
         .logo-image {
-            width: 60px;
-            height: 60px;
+            width: 40px;
+            height: 40px;
             margin-right: 10px;
         }
-
         .logo-text {
-            font-size: 26px;
+            font-size: 1.3em;
             font-weight: bold;
         }
 
         nav {
-            flex: 2;
+            display: flex;
+            align-items: center;
         }
 
         nav ul {
@@ -48,14 +50,25 @@
             margin: 0;
             padding: 0;
             display: flex;
-            justify-content: space-around;
+            gap: 15px;
         }
 
         nav ul li a {
             text-decoration: none;
             color: black;
-            font-size: 20px;
-            font-weight: bold;
+            padding: 10px 15px;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        nav ul li a:hover {
+            background-color: rgba(0, 0, 0, 0.1);
+        }
+
+        .menu-icon {
+            cursor: pointer;
+            display: none;
+            font-size: 4em;
         }
 
         main {
@@ -63,7 +76,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            height: calc(100% - 80px); /* Adjust height to fill the remaining viewport height minus header */
+            padding-top: 20px;
             box-sizing: border-box;
         }
 
@@ -75,7 +88,7 @@
             background-position: center; /* Center the background image */
             color: white; /* Ensure text is readable over the background image */
             width: 100%; /* Full width */
-            height: 100%; /* Full height */
+            height: 100vh; /* Full height */
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -137,6 +150,53 @@
         button:hover {
             background-color: #0056b3;
         }
+
+        @media only screen and (max-width: 900px) {
+            .menu-icon {
+                display: block;
+            }
+            nav ul {
+                display: none;
+                flex-direction: column;
+                align-items: flex-end; /* Align items to the right */
+                position: fixed; /* Fix position to the right side */
+                top: 50px; /* Position menu below header */
+                right: 0;
+                background-color: white; /* Ensure background color is white */
+                width: 200px; /* Set a fixed width */
+                padding: 10px; /* Add padding */
+                box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add box shadow for better visibility */
+                z-index: 1; /* Ensure menu is in front */
+            }
+            nav ul.show {
+                display: flex;
+            }
+            nav ul li {
+                margin: 10px 0;
+            }
+            .contact-option {
+                width: 80%;
+            }
+        }
+
+        @media only screen and (max-width: 500px) {
+            .logo-text {
+                font-size: 1.2em;
+            }
+            .contact-option {
+                width: 100%;
+            }
+            .contact-section h2 {
+                font-size: 28px;
+            }
+            .contact-section p,
+            .contact-option p {
+                font-size: 16px;
+            }
+            .contact-option h3 {
+                font-size: 20px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -146,7 +206,8 @@
             <div class="logo-text">Eva's Dog Services</div>
         </div>
         <nav>
-            <ul>
+            <div class="menu-icon" onclick="toggleMenu()">☰</div>
+            <ul id="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="about.html">About Me</a></li>
@@ -163,18 +224,27 @@
                     <div class="contact-icon">
                         <img src="phone-icon.png" alt="Call Us"> <!-- Placeholder for phone icon -->
                     </div>
-                    <h3>Call/Text Me</h3>
+                    <h3>Call/Text Me
+                        <br>(708)-738-7688</h3>
                     <p>The best way to get in contact with me is by sending me a text detailing what service you want.</p>
                 </div>
                 <div class="contact-option">
                     <div class="contact-icon">
                         <img src="email-icon.png" alt="Ask a Question"> <!-- Placeholder for email icon -->
                     </div>
-                    <h3>Send Me an Email</h3>
-                    <p>Another great way to get in contact with me is by emailing me at esageramos@gmail.com</p>
+                    <h3>Send Me an Email
+                        <br> esageramos@gmail.com</h3>
+                    <p>Another great way to get in contact with me is by emailing me</p>
                 </div>
             </div>
         </section>
     </main>
+
+    <script>
+        function toggleMenu() {
+            var menu = document.getElementById('menu');
+            menu.classList.toggle('show');
+        }
+    </script>
 </body>
 </html>
