--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eva's Dog Services</title>
-        <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
     <style>
         body {
@@ -12,9 +12,10 @@
             padding: 0;
             font-family: 'Comic Sans MS', cursive, sans-serif;
             position: relative;
+            overflow-y: auto; /* Ensure body can scroll */
         }
         .background-image {
-            position: absolute;
+            position: fixed;
             top: 0;
             left: 0;
             width: 100%;
@@ -30,9 +31,10 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin: 20px auto; /* Center the content horizontally and add margin to the top */
-            max-width: 600px; /* Limit the maximum width of the content */
-            position: relative; /* Ensure content remains in position */
+            margin: 20px auto;
+            max-width: 600px;
+            position: relative;
+            z-index: 0;
         }
         .services-container {
             display: flex;
@@ -45,7 +47,7 @@
             width: 45%;
             text-align: center;
             cursor: pointer;
-            position: relative; /* Position service tabs relative to content container */
+            position: relative;
         }
         .service-image {
             width: 100px;
@@ -57,14 +59,110 @@
             background-color: #f4f4f4;
             padding: 20px;
             border-radius: 10px;
-            position: absolute; /* Position service info boxes absolute */
-            top: calc(100% + 10px); /* Position service info boxes below service tabs */
+            position: absolute;
+            top: calc(100% + 10px);
             left: 50%;
             transform: translateX(-50%);
-            width: 90%; /* Adjust width as needed */
+            width: 90%;
         }
         .active {
             border: 2px solid #007BFF;
+        }
+        header {
+            width: 100%;
+            background-color: white; /* Change header background to white */
+            color: black; /* Ensure text color is black */
+            padding: 10px 0; /* Reduce padding for smaller header */
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            position: relative;
+            z-index: 2; /* Ensure header is in front */
+        }
+        .logo-container {
+            display: flex;
+            align-items: center;
+            margin-left: 20px;
+        }
+        .logo-image {
+            width: 40px;
+            height: 40px;
+            margin-right: 10px;
+        }
+        .logo-text {
+            font-size: 1.3em;
+        }
+        nav {
+            position: relative;
+            margin-right: 20px;
+        }
+        .menu-icon {
+            cursor: pointer;
+            display: none;
+            font-size: 4em;
+            position: relative;
+          margin-left: 40%;
+            margin-top: -7%;
+        }
+        nav ul {
+            list-style: none;
+            display: flex;
+            gap: 15px;
+            padding: 0;
+            margin: 0;
+        }
+        nav ul li {
+            padding: 0;
+            margin: 0;
+        }
+        nav ul li a {
+            color: black; /* Ensure link color is black */
+            text-decoration: none;
+            padding: 10px 15px; /* Increase padding for menu items */
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+        nav ul li a:hover {
+            background-color: rgba(0, 0, 0, 0.1);
+        }
+        @media only screen and (max-width: 900px) {
+            .menu-icon {
+                display: block;
+            }
+            nav ul {
+                flex-direction: column;
+                align-items: flex-end; /* Align items to the right */
+                position: fixed; /* Fix position to the right side */
+                top: 50px; /* Position menu below header */
+                right: 0;
+                background-color: white; /* Ensure background color is white */
+                display: none;
+                width: 200px; /* Set a fixed width */
+                padding: 10px; /* Add padding */
+                z-index: 1; /* Ensure menu is in front */
+                box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add box shadow for better visibility */
+            }
+            nav ul li {
+                margin: 10px 0;
+            }
+            nav ul.show {
+                display: flex;
+            }
+        }
+        @media only screen and (max-width: 500px) {
+            .logo-text {
+                font-size: 1.2em;
+            }
+            .service-image {
+                width: 80px;
+            }
+            .service-tab h2 {
+                font-size: 1.5em;
+            }
+            .service-info {
+                top: calc(100% + 20px);
+                width: 95%;
+            }
         }
     </style>
 </head>
@@ -73,11 +171,12 @@
 
     <header>
         <div class="logo-container">
-            <img src="logo.png" alt="Logo" class="logo-image"> <!-- Placeholder for logo image -->
+            <img src="logo.png" alt="Logo" class="logo-image">
             <div class="logo-text">Eva's Dog Services</div>
         </div>
         <nav>
-            <ul>
+            <div class="menu-icon" onclick="toggleMenu()">☰</div>
+            <ul id="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="about.html">About Me</a></li>
@@ -99,20 +198,20 @@
             </div>
         </div>
 
-        <div id="walking-info" class="service-info" style="display:none;">
+        <div id="walking-info" class="service-info">
             <h2>Dog Walking</h2>
             <p>Want your furry friend to go on a refreshing walk? As an experienced walker, I make sure your dog gets the exercise they need.</p>
-           <a href="contact.html">
-            <button>Book Now</button>
-        </a>
+            <a href="contact.html">
+                <button>Book Now</button>
+            </a>
         </div>
 
-        <div id="dogsitting-info" class="service-info" style="display:none;">
+        <div id="dogsitting-info" class="service-info">
             <h2>Dog Sitting</h2>
             <p>Need someone to care for your dog while you're away? My overnight dog sitting service lets you go out without leaving your dogs alone.</p>
-             <a href="contact.html">
-            <button>Book Now</button>
-        </a>
+            <a href="contact.html">
+                <button>Book Now</button>
+            </a>
         </div>
     </div>
 
@@ -135,6 +234,11 @@
                     info.style.display = 'none';
                 }
             });
+        }
+
+        function toggleMenu() {
+            var menu = document.getElementById('menu');
+            menu.classList.toggle('show');
         }
     </script>
 </body>
