--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
             margin: 0;
             padding: 0;
             height: 100%;
-            font-family: 'Comic Sans MS', cursive, sans-serif;
+            font-family: 'Comic Sans MS', sans-serif;
         }
 
         header {
