--- a/testimonials.html
+++ b/testimonials.html
@@ -10,7 +10,7 @@
         body {
             margin: 0;
             padding: 0;
-            font-family: 'Comic Sans MS', cursive, sans-serif;
+            font-family: 'Comic Sans MS', sans-serif;
             position: relative;
             overflow-y: auto; /* Ensure body can scroll */
             background-image: url('tower.jpg'); /* Set background image */
