--- a/about.html
+++ b/about.html
@@ -169,10 +169,10 @@
     <div class="about-section">
         <div class="about-text">
             <h2>So, who am I?</h2>
-            <p>The most amazing beautiful girl ever</p>
+            <p>Hi! My name is Eva Sage Ramos and I would love the opportunity to walk/watch your precious pup! I am 19 years old and am currently attending College of Dupage and am planning to major in Education and minor in History when I transfer. Besides school and two days of work (Friday and Saturday), Im avaliable to dedicate time to your angel. If your dog needs to be watched Friday and Saturday--I can work around that as well. I love all animals and would love to care for your furry family member!</p>
             <br><br><br>
             <h2>Why should you choose me?</h2>
-            <p>Because I'm literally perfect</p>
+            <p>I have over 3 years going on 4 of dog sitting and walking experience and have two dogs of my own. I am fully prepared for any emergency or interesting circumstance that may arise with your fur baby. Also, fun fact: Im vegetarian, hoping to be vegan eventually. But why does that matter? It matters because it provides proof of my love for EVERY animal, not just the cute and furry ones. I committed to fighting for animal (as well as human) rights and take my job as a dogsitter very seriously. Their happiness AND safety is of utmost importance.  </p>
         </div>
     </div>
 
