--- a/contact.html
+++ b/contact.html
@@ -233,7 +233,7 @@ margin-left: 20px;
                         <img src="email-icon.png" alt="Ask a Question"> <!-- Placeholder for email icon -->
                     </div>
                     <h3>Send Me an Email
-                        <br> esageramos@gmail.com</h3>
+                        <br> <a href="mailto:esageramos@gmail.com" target="_blank">esageramos@gmail.com</a> </h3>
                     <p>Another great way to get in contact with me is by emailing me</p>
                 </div>
             </div>
