--- a/testimonials.html
+++ b/testimonials.html
@@ -190,16 +190,16 @@
         <h1 class="testimonial-header">Testimonials</h1>
         <div class="testimonial-container">
             <div class="testimonial">
-                <p class="testimonial-content">"Eva's services are amazing! My dog always comes back happy and well-exercised."</p>
-                <p class="testimonial-author">- Kolby Pezan</p>
+                <p class="testimonial-content">"Eva is amazing with my girl! It's great knowing someone is so loving and responsible with your babies while you're away!"</p>
+                <p class="testimonial-author">- Michelle</p>
             </div>
             <div class="testimonial">
                 <p class="testimonial-content">"I highly recommend Eva. She's reliable, caring, and truly loves dogs."</p>
-                <p class="testimonial-author">- Kolby Pezan</p>
+                <p class="testimonial-author">- The Pezan Family</p>
             </div>
             <div class="testimonial">
                 <p class="testimonial-content">"Eva goes above and beyond for her clients. She's a lifesaver!"</p>
-                <p class="testimonial-author">- Kolby Pezan</p>
+                <p class="testimonial-author">- The Meyer Family</p>
             </div>
         </div>
     </div>
