--- a/testimonials.html
+++ b/testimonials.html
@@ -191,7 +191,7 @@
         <div class="testimonial-container">
             <div class="testimonial">
                 <p class="testimonial-content">"Eva is amazing with my girl! It's great knowing someone is so loving and responsible with your babies while you're away!"</p>
-                <p class="testimonial-author">- Michelle</p>
+                <p class="testimonial-author">- The Aquino Family</p>
             </div>
             <div class="testimonial">
                 <p class="testimonial-content">"I highly recommend Eva. She's reliable, caring, and truly loves dogs."</p>
