--- a/about.html
+++ b/about.html
@@ -3,184 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eva's Dog Services</title>
+    <title>About Me - Eva's Dog Services</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: 'Comic Sans MS', sans-serif;
-            background-color: white;
-        }
-        .content {
-            padding: 20px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-            text-align: center;
-        }
-        .about-section {
-            display: flex;
-            align-items: flex-start;
-            justify-content: space-between;
-            width: 100%;
-            margin-top: 10%;
-            flex-wrap: wrap;
-        }
-        .background-image {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-size: cover;
-            background-position: center;
-            z-index: -1;
-        }
-        .about-text {
-            background: rgba(0, 0, 0, 0.6);
-            padding: 20px;
-            border-radius: 10px;
-            font-size: 24px;
-            text-align: left;
-            width: 100%;
-            max-width: 600px;
-            margin: auto;
-            color: white;
-        }
-        h2 {
-            font-size: 24px;
-            font-weight: bold;
-            margin-bottom: 10px;
-        }
-        p {
-            font-size: 18px;
-            line-height: 1.6;
-            margin: 0;
-        }
-        header {
-            width: 100%;
-            background-color: white;
-            color: black;
-            padding: 10px 0;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            position: relative;
-            z-index: 2;
-        }
-        .logo-container {
-            display: flex;
-            align-items: center;
-            margin-left: 20px;
-        }
-        .logo-image {
-            width: 40px;
-            height: 40px;
-            margin-right: 10px;
-        }
-        .logo-text {
-            font-size: 1.3em;
-        }
-        nav {
-            position: relative;
-            margin-right: 20px;
-        }
-        .menu-icon {
-            cursor: pointer;
-            display: none;
-            font-size: 2em;
-        }
-        nav ul {
-            list-style: none;
-            display: flex;
-            gap: 15px;
-            padding: 0;
-            margin: 0;
-        }
-        nav ul li {
-            padding: 0;
-            margin: 0;
-        }
-        nav ul li a {
-            color: black;
-            text-decoration: none;
-            padding: 10px 15px;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-        nav ul li a:hover {
-            background-color: rgba(0, 0, 0, 0.1);
-        }
-        @media only screen and (max-width: 900px) {
-            .menu-icon {
-                display: block;
-            }
-            nav ul {
-                flex-direction: column;
-                align-items: flex-end;
-                position: fixed;
-                top: 50px;
-                right: 0;
-                background-color: white;
-                display: none;
-                width: 200px;
-                padding: 10px;
-                z-index: 1;
-                box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            }
-            nav ul li {
-                margin: 10px 0;
-            }
-            nav ul.show {
-                display: flex;
-            }
-        }
-        @media only screen and (max-width: 500px) {
-            .logo-text {
-                font-size: 1.2em;
-            }
-            .about-text {
-                font-size: 18px;
-            }
-        }
-    </style>
 </head>
 <body>
-      <div class="background-image" style="background-image: url('Eva.jpg');"></div>
-    <header>
-        <div class="logo-container">
-            <img src="logo.png" alt="Logo" class="logo-image">
-            <div class="logo-text">Eva's Dog Services</div>
-        </div>
-        <nav>
-            <div class="menu-icon" onclick="toggleMenu()">☰</div>
-            <ul id="menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="testimonials.html">Testimonials</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    <div class="about-section">
-        <div class="about-text">
-            <h2>So, who am I?</h2>
-            <p>Hi! My name is Eva Sage Ramos and I would love the opportunity to walk/watch your precious pup! I am 19 years old and am currently attending College of Dupage and am planning to major in Education and minor in History when I transfer. Besides school and two days of work (Friday and Saturday), Im avaliable to dedicate time to your angel. If your dog needs to be watched Friday and Saturday--I can work around that as well. I love all animals and would love to care for your furry family member!</p>
-            <br><br><br>
-            <h2>Why should you choose me?</h2>
-            <p>I have over 3 years going on 4 of dog sitting and walking experience and have two dogs of my own. I am fully prepared for any emergency or interesting circumstance that may arise with your fur baby. Also, fun fact: Im vegetarian, hoping to be vegan eventually. But why does that matter? It matters because it provides proof of my love for EVERY animal, not just the cute and furry ones. I committed to fighting for animal (as well as human) rights and take my job as a dogsitter very seriously. Their happiness AND safety is of utmost importance.  </p>
-        </div>
-    </div>
 
-    <script>
-        function toggleMenu() {
-            var menu = document.getElementById('menu');
-            menu.classList.toggle('show');
-        }
-    </script>
+    <header class="site-header">
+        <div class="header-container">
+            <a href="index.html" class="logo-container">
+                <img src="logo.png" alt="Logo" class="logo-image">
+                <div class="logo-text">Eva's Dog Services</div>
+            </a>
+            <nav class="main-nav" id="main-nav">
+                <ul class="nav-list">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="about.html" class="nav-active">About Me</a></li>
+                    <li><a href="testimonials.html">Testimonials</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+            <div class="menu-icon" id="menu-icon">☰</div>
+        </div>
+    </header>
+
+    <main class="page-container">
+        <div class="background-image" style="background-image: url('Eva.jpg');"></div>
+        <div class="content-box">
+            <div class="about-flex-container">
+                <div class="about-image-column">
+                    <img src="Eva.jpg" alt="Eva Sage Ramos" class="about-profile-image">
+                </div>
+                <div class="about-text-column">
+                    <h1 class="page-title">About Me</h1>
+                    <p>Hi, I'm Eva Sage Ramos! I'm a passionate and dedicated animal lover with over three years of professional experience in dog walking and sitting. As a proud dog owner myself and a student pursuing a degree in Education, I understand the importance of patience, reliability, and creating a positive environment for every animal I care for.</p>
+                    
+                    <h3>Why Choose Me?</h3>
+                    <p>My commitment to animal welfare goes beyond just a job—it’s a core part of who I am. I believe every dog deserves to be safe, happy, and loved, especially when their family is away. I am prepared for any situation and take the responsibility of caring for your furry family member very seriously. Their happiness and safety are always my top priorities.</p>
+
+                    <a href="contact.html" class="button-primary" style="margin-top: 20px;">Get In Touch</a>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <footer class="site-footer">
+        <p>&copy; 2024 Eva's Dog Services. All Rights Reserved.</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
+
+
