--- a/contact.html
+++ b/contact.html
@@ -3,248 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eva's Dog Services</title>
+    <title>Contact Me - Eva's Dog Services</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            font-family: 'Comic Sans MS', sans-serif;
-        }
-
-        header {
-            width: 100%;
-            background-color: white; /* Change header background to white */
-            color: black; /* Ensure text color is black */
-            padding: 10px 0; /* Reduce padding for smaller header */
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            position: relative;
-            z-index: 2; /* Ensure header is in front */
-        }
-        .logo-container {
-            display: flex;
-            align-items: center;
-margin-left: 20px;
-        }
-
-        .logo-image {
-            width: 40px;
-            height: 40px;
-            margin-right: 10px;
-        }
-        .logo-text {
-            font-size: 1.3em;
-            font-weight: bold;
-        }
-
-        nav {
-            display: flex;
-            align-items: center;
-        }
-
-        nav ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            gap: 15px;
-        }
-
-        nav ul li a {
-            text-decoration: none;
-            color: black;
-            padding: 10px 15px;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-
-        nav ul li a:hover {
-            background-color: rgba(0, 0, 0, 0.1);
-        }
-
-        .menu-icon {
-            cursor: pointer;
-            display: none;
-            font-size: 4em;
-        }
-
-        main {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            padding-top: 20px;
-            box-sizing: border-box;
-        }
-
-        .contact-section {
-            text-align: center;
-            padding: 20px;
-            background-image: url('final.jpg'); /* Background image for the contact section */
-            background-size: cover; /* Ensure the background image covers the entire section */
-            background-position: center; /* Center the background image */
-            color: white; /* Ensure text is readable over the background image */
-            width: 100%; /* Full width */
-            height: 100vh; /* Full height */
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
-
-        .contact-section h2 {
-            font-size: 32px;
-            margin-bottom: 10px;
-        }
-
-        .contact-section p {
-            font-size: 20px;
-            margin-bottom: 40px;
-        }
-
-        .contact-options {
-            display: flex;
-            justify-content: space-around;
-            flex-wrap: wrap;
-        }
-
-        .contact-option {
-            background-color: rgba(233, 236, 239, 0.8); /* Semi-transparent background */
-            padding: 20px;
-            border-radius: 10px;
-            width: 40%;
-            box-sizing: border-box;
-            margin-bottom: 20px;
-            text-align: center;
-            color: black; /* Text color inside the contact options */
-        }
-
-        .contact-icon img {
-            width: 50px;
-            height: 50px;
-            margin-bottom: 20px;
-        }
-
-        .contact-option h3 {
-            font-size: 24px;
-            margin-bottom: 10px;
-        }
-
-        .contact-option p {
-            font-size: 18px;
-            margin-bottom: 20px;
-        }
-
-        button {
-            background-color: #007BFF;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-            border-radius: 5px;
-        }
-
-        button:hover {
-            background-color: #0056b3;
-        }
-
-        @media only screen and (max-width: 900px) {
-            .menu-icon {
-                display: block;
-            }
-            nav ul {
-                display: none;
-                flex-direction: column;
-                align-items: flex-end; /* Align items to the right */
-                position: fixed; /* Fix position to the right side */
-                top: 50px; /* Position menu below header */
-                right: 0;
-                background-color: white; /* Ensure background color is white */
-                width: 200px; /* Set a fixed width */
-                padding: 10px; /* Add padding */
-                box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add box shadow for better visibility */
-                z-index: 1; /* Ensure menu is in front */
-            }
-            nav ul.show {
-                display: flex;
-            }
-            nav ul li {
-                margin: 10px 0;
-            }
-            .contact-option {
-                width: 80%;
-            }
-        }
-
-        @media only screen and (max-width: 500px) {
-            .logo-text {
-                font-size: 1.2em;
-            }
-            .contact-option {
-                width: 100%;
-            }
-            .contact-section h2 {
-                font-size: 28px;
-            }
-            .contact-section p,
-            .contact-option p {
-                font-size: 16px;
-            }
-            .contact-option h3 {
-                font-size: 20px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <div class="logo-container">
-            <img src="logo.png" alt="Logo" class="logo-image"> <!-- Placeholder for logo image -->
-            <div class="logo-text">Eva's Dog Services</div>
+
+    <header class="site-header">
+        <div class="header-container">
+            <div class="logo-container">
+                <img src="logo.png" alt="Eva's Dog Services Logo" class="logo-image">
+                <a href="index.html" class="logo-text">Eva's Dog Services</a>
+            </div>
+            <nav class="main-nav">
+                <ul class="nav-list" id="menu">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="about.html">About Me</a></li>
+                    <li><a href="testimonials.html">Testimonials</a></li>
+                    <li><a href="contact.html" class="nav-active">Contact</a></li>
+                </ul>
+            </nav>
+            <div class="menu-icon" id="menu-icon">☰</div>
         </div>
-        <nav>
-            <div class="menu-icon" onclick="toggleMenu()">☰</div>
-            <ul id="menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="testimonials.html">Testimonials</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
     </header>
-    <main>
-        <section class="contact-section">
-            <h2>Contact Me To Book An Appointment</h2>
+
+    <main class="page-container">
+        <div class="background-image" style="background-image: url('final.jpg');"></div>
+        <div class="content-box">
+            <h1 class="page-title">Book an Appointment</h1>
+            <p class="page-intro">I'd love to hear from you! The best way to get in touch is by text or email. Please include your name, your dog's name, and the service you're interested in.</p>
             <div class="contact-options">
-                <div class="contact-option">
-                    <div class="contact-icon">
-                        <img src="phone-icon.png" alt="Call Us"> <!-- Placeholder for phone icon -->
-                    </div>
-                    <h3>Call/Text Me
-                        <br>(708)-738-7688</h3>
-                    <p>The best way to get in contact with me is by sending me a text detailing what service you want.</p>
+                <div class="contact-card">
+                    <img src="phone-icon.png" alt="Phone icon" class="contact-icon">
+                    <h3>Call or Text Me</h3>
+                    <p>For the fastest response, please send a text message.</p>
+                    <a href="tel:708-738-7688" class="contact-link">(708) 738-7688</a>
                 </div>
-                <div class="contact-option">
-                    <div class="contact-icon">
-                        <img src="email-icon.png" alt="Ask a Question"> <!-- Placeholder for email icon -->
-                    </div>
-                    <h3>Send Me an Email
-                        <br> <a href="mailto:esageramos@gmail.com" target="_blank">esageramos@gmail.com</a> </h3>
-                    <p>Another great way to get in contact with me is by emailing me</p>
+                <div class="contact-card">
+                    <img src="email-icon.png" alt="Email icon" class="contact-icon">
+                    <h3>Send Me an Email</h3>
+                    <p>Feel free to email me with any questions or booking inquiries.</p>
+                    <a href="mailto:esageramos@gmail.com" class="contact-link">esageramos@gmail.com</a>
                 </div>
             </div>
-        </section>
+        </div>
     </main>
 
-    <script>
-        function toggleMenu() {
-            var menu = document.getElementById('menu');
-            menu.classList.toggle('show');
-        }
+    <footer class="site-footer">
+        <p>&copy; 2025 Eva's Dog Services. All Rights Reserved.</p>
+    </footer>
+    
+    <script src="script.js"></script>
+</body>
+</html>
+
     </script>
 </body>
 </html>
