--- a/testimonials.html
+++ b/testimonials.html
@@ -3,212 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eva's Dog Services - Testimonials</title>
+    <title>Testimonials - Eva's Dog Services</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: 'Comic Sans MS', sans-serif;
-            position: relative;
-            overflow-y: auto; /* Ensure body can scroll */
-            background-image: url('tower.jpg'); /* Set background image */
-            background-size: cover; /* Cover the entire background */
-            background-position: center;
-            background-repeat: no-repeat; /* Prevent background image from repeating */
-            min-height: 100vh; /* Ensure the background covers the entire viewport height */
-        }
-        
-        .testimonial-header {
-            text-align: center;
-            font-size: 24px;
-            font-weight: bold;
-            margin-top: 20px;
-            color: black; /* Set text color to contrast with background */
-        }
-        .testimonial-container {
-            display: flex;
-            justify-content: space-between;
-            flex-wrap: wrap;
-            width: 100%; /* Ensure the container takes full width */
-            margin-top: 20px; /* Add a margin at the top of the testimonials container */
-        }
-        .testimonial {
-            width: 30%;
-            padding: 20px;
-            background-color: #f4f4f4;
-            border-radius: 100px;
-            margin-bottom: 20px;
-            flex-grow: 1;
-            box-sizing: border-box; /* Include padding and border in element's total width and height */
-        }
-        .testimonial-content {
-            font-style: italic;
-            margin-bottom: 10px;
-        }
-        .testimonial-author {
-            font-weight: bold;
-        }
-        header {
-            width: 100%;
-            background-color: white; /* Change header background to white */
-            color: black; /* Ensure text color is black */
-            padding: 10px 0; /* Reduce padding for smaller header */
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            position: fixed; /* Make header fixed */
-            top: 0; /* Stick header to the top */
-            z-index: 2; /* Ensure header is in front */
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Add a subtle shadow to distinguish the header */
-        }
-        .logo-container {
-            display: flex;
-            align-items: center;
-            margin-left: 20px;
-        }
-        .logo-image {
-            width: 40px;
-            height: 40px;
-            margin-right: 10px;
-        }
-        .logo-text {
-            font-size: 1.3em;
-        }
-        nav {
-            position: relative;
-            margin-right: 20px;
-        }
-        .menu-icon {
-            cursor: pointer;
-            display: none;
-            font-size: 2em; /* Adjusted font size for the menu icon */
-            position: relative;
-            margin-left: 20px;
-        }
-        nav ul {
-            list-style: none;
-            display: flex;
-            gap: 15px;
-            padding: 0;
-            margin: 0;
-        }
-        nav ul li {
-            padding: 0;
-            margin: 0;
-        }
-        nav ul li a {
-            color: black; /* Ensure link color is black */
-            text-decoration: none;
-            padding: 10px 15px; /* Increase padding for menu items */
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-        nav ul li a:hover {
-            background-color: rgba(0, 0, 0, 0.1);
-        }
-        .content {
-            padding: 20px;
-            background-color: rgba(255, 255, 255, 0.8);
-            border-radius: 10px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin: 100px auto 20px; /* Add margin at the top to ensure space below the header */
-            max-width: 1000px;
-            position: relative;
-            z-index: 0;
-        }
-        @media only screen and (max-width: 900px) {
-
-            .menu-icon {
-                display: block;
-            }
-            nav ul {
-                flex-direction: column;
-                align-items: flex-end; /* Align items to the right */
-                position: fixed; /* Fix position to the right side */
-                top: 50px; /* Position menu below header */
-                right: 0;
-                background-color: white; /* Ensure background color is white */
-                display: none;
-                width: 200px; /* Set a fixed width */
-                padding: 10px; /* Add padding */
-                z-index: 1; /* Ensure menu is in front */
-                box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add box shadow for better visibility */
-            }
-            nav ul li {
-                margin: 10px 0;
-            }
-            nav ul.show {
-                display: flex;
-            }
-            .content {
-                margin-top: 140px; /* Adjust for smaller screens */
-            }
-            .testimonial-container {
-                margin-top: 40px; /* Add margin top for the testimonial container */
-            }
-        }
-        @media only screen and (max-width: 500px) {
-            .logo-text {
-                font-size: 1.2em;
-            }
-            .testimonial {
-                width: 100%;
-                margin: 10px 0;
-            }
-            .content {
-                margin-top: 170px; /* Further adjust for very small screens */
-            }
-            .testimonial-container {
-                margin-top: 50px; /* Further increase margin top for the testimonial container */
-            }
-        }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <div class="logo-container">
-            <img src="logo.png" alt="Logo" class="logo-image">
-            <div class="logo-text">Eva's Dog Services</div>
-        </div>
-        <nav>
-            <div class="menu-icon" onclick="toggleMenu()">☰</div>
-            <ul id="menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="testimonials.html">Testimonials</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    
-    <div class="content">
-        <h1 class="testimonial-header">Testimonials</h1>
-        <div class="testimonial-container">
-            <div class="testimonial">
-                <p class="testimonial-content">"Eva is amazing with my girl! It's great knowing someone is so loving and responsible with your babies while you're away!"</p>
-                <p class="testimonial-author">- The Aquino Family</p>
-            </div>
-            <div class="testimonial">
-                <p class="testimonial-content">"I highly recommend Eva. She's reliable, caring, and truly loves dogs."</p>
-                <p class="testimonial-author">- The Pezan Family</p>
-            </div>
-            <div class="testimonial">
-                <p class="testimonial-content">"Eva goes above and beyond for her clients. She's a lifesaver!"</p>
-                <p class="testimonial-author">- The Meyer Family</p>
-            </div>
-        </div>
-    </div>
 
-    <script>
-        function toggleMenu() {
-            var menu = document.getElementById('menu');
-            menu.classList.toggle('show');
-        }
+    <header class="site-header">
+        <div class="header-container">
+            <div class="logo-container">
+                <img src="logo.png" alt="Eva's Dog Services Logo" class="logo-image">
+                <a href="index.html" class="logo-text">Eva's Dog Services</a>
+            </div>
+            <nav class="main-nav">
+                <ul class="nav-list" id="menu">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="about.html">About Me</a></li>
+                    <li><a href="testimonials.html" class="nav-active">Testimonials</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+            <div class="menu-icon" id="menu-icon">☰</div>
+        </div>
+    </header>
+
+    <main class="page-container">
+        <div class="background-image" style="background-image: url('tower.jpg');"></div>
+        <div class="content-box">
+            <h1 class="page-title">What My Clients Are Saying</h1>
+            <div class="testimonial-grid">
+                <div class="testimonial-card">
+                    <p class="testimonial-quote">"Eva is amazing with my girl! It's great knowing someone is so loving and responsible with your babies while you're away!"</p>
+                    <p class="testimonial-author">- The Aquino Family</p>
+                </div>
+                <div class="testimonial-card">
+                    <p class="testimonial-quote">"I highly recommend Eva. She's reliable, caring, and truly loves dogs."</p>
+                    <p class="testimonial-author">- The Pezan Family</p>
+                </div>
+                <div class="testimonial-card">
+                    <p class="testimonial-quote">"Eva goes above and beyond for her clients. She's a lifesaver!"</p>
+                    <p class="testimonial-author">- The Meyer Family</p>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <footer class="site-footer">
+        <p>&copy; 2025 Eva's Dog Services. All Rights Reserved.</p>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
+
     </script>
 </body>
 </html>
