--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
                     <p>Hi, I'm Eva Sage Ramos! I'm a passionate and dedicated animal lover with over three years of professional experience in dog walking and sitting. As a proud dog owner myself and a student pursuing a degree in Education, I understand the importance of patience, reliability, and creating a positive environment for every animal I care for.</p>
                     
                     <h3>Why Choose Me?</h3>
-                    <p>My commitment to animal welfare goes beyond just a job—it’s a core part of who I am. I believe every dog deserves to be safe, happy, and loved, especially when their family is away. I am prepared for any situation and take the responsibility of caring for your furry family member very seriously. Their happiness and safety are always my top priorities.</p>
+                    <p>I have over 3 years going on 4 of dog sitting and walking experience and have two dogs of my own. I am fully prepared for any emergency or interesting circumstance that may arise with your fur baby. Also, fun fact: Im vegetarian, hoping to be vegan eventually. But why does that matter? It matters because it provides proof of my love for EVERY animal, not just the cute and furry ones. I am committed to fighting for animal (as well as human) rights and I take my job as a dogsitter very seriously. Their happiness AND safety is of utmost importance.</p>
 
                     <a href="contact.html" class="button-primary" style="margin-top: 20px;">Get In Touch</a>
                 </div>
